Changed margins within containers to percentages to avoid overlapping

--- a/phase-2/vibely/src/App.css
+++ b/phase-2/vibely/src/App.css
@@ -11,7 +11,6 @@ body {
 
 img {
   display: block;
-  margin-top: 30px;
   border: none;
   border-radius: 10%;
 }
@@ -72,17 +71,27 @@ p {
   font-size: 24px;
   font-weight: bold;
   text-align: center;
-  margin: 10px 30px;
+  margin: 5%;
 }
 
 .quote-author {
   font-size: 14px;
   text-align: center;
-  margin: 30px 30px;
+  margin: 5%;
 
 }
 
-.keepBtn, 
+.keepBtn {
+  font-size: 12px;
+  padding: 10px;
+  border: 2px solid #a211cf;
+  border-radius: 20%;
+  background: #222326;
+  color: #a211cf;
+  cursor: pointer;
+  margin-left: 10%;
+}
+
 .changeBtn {
   font-size: 12px;
   padding: 10px;
@@ -90,9 +99,8 @@ p {
   border-radius: 20%;
   background: #222326;
   color: #a211cf;
-  margin-left: 30px;
-  margin-right: 30px;
   cursor: pointer;
+  margin-right: 10%;
 }
 
 .changeBtn:hover {
@@ -111,7 +119,7 @@ p {
   border-radius: 20%;
   background: #222326;
   color: #a211cf;
-  margin-left: 100px;
+  margin-left: 20%;
   cursor: pointer;
 }
 
@@ -122,7 +130,7 @@ p {
   border-radius: 20%;
   background: #222326;
   color: #a211cf;
-  margin-right: 100px;
+  margin-right: 20%;
   cursor: pointer;
 }
 
@@ -133,6 +141,11 @@ p {
   align-items: center;
   margin-top: 20px;
   overflow: hidden;
+}
+
+.image {
+  margin: 3%;
+
 }
 
 .imgChangeBtn:hover {
